# s3-specs

./: .gitignore  AUTHORS  README-reports.md  README.md  README_S3_Benchmark.md  README_S3_Consistency.md  README_S3_Consistency.md.md  _config  index.html  justfile  legacy-params.example.yaml  menu.just  params.example.yaml  params.yaml  pyproject.toml  report_generators.py  run-spec.sh  run_tests_and_generate_report.py  utils.just
.github/: pull_request_template.md
.github/workflows/: artifact-tests.yml  bucket-monitor.yml  cleanup-tests.yml  daily-tests-with-latest-and-nightly-tools.yml  deploy-reports.yml  essential-tests.yml  full-docker-image.yml  generate-docker-image-daily.yml  generate-docker-image-dev.yml  generate-docker-image-on-push-dev.yml  generate-docker-image-on-push.yml  generate-docker-image.yml  manual-test.yml  manually-run-bot-test.yml  manually-run-homologacao-tests.yml  manually-run-tests-with-latests-tools.yml  notify-pr.yml  optional-tests.yml  pr-notify.yml  pull-request-extra-test.yml  pull-request-test.yml  recurrent-homolog-tests.yml  recurrent-tests-12h.yml  recurrent-tests-1h.yml  recurrent-tests-6h.yml  recurrent-tests.yml  run-cleanup.yml  run-tests-with-report.yml  run-tests.yml  run_tests.yml  schedule-run-homologacao-tests.yml  schedule_tests.yml  webhook-test.yml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: acl_test.py  benchmark_test.py  big_objects_test.py  cold_storage_test.py  configure_profiles.py  conftest.py  consistency_test.py  delete-bucket-force_test.py  expected_fail.py  index.md  list-buckets.py  list-buckets_test.py  locking_cli_test.py  locking_test.py  multiple_objects_test.py  object_download_cli.py  objects_list_cli.py  policies_test.py  policy_cli_test.py  presigned-urls_test.py  profiles_policies_test.py  s3_helpers.py  unique-bucket-name.py  unique-bucket-name_test.py  versioning_cli_test.py  versioning_test.py
docs/utils/: crud.py  locking.py  policy.py  utils.py
oci/: README.md  entrypoint.sh  full.Containerfile  justfile  tests_dev.Containerfile  tests_latest.Containerfile  tests_nightly.Containerfile  tests_oldest.Containerfile  tools_dev.Containerfile  tools_latest.Containerfile  tools_nightly.Containerfile  tools_oldest.Containerfile
output/: actions_workflow.parquet  benchmark_results.csv  insconsistencies_results.csv  report_inconsistencies.csv
output/artifact/13903386332/github-pages/: artifact.tar
params/: br-ne1.yaml  br-se1.yaml
relatory/: run.sh
report/: benchmark_results.csv  report-inconsistencies.csv
reports/: .gitignore  README.md  pyproject.toml  report.html  report.json  run.sh  test.ipynb
reports/docs/: __main__.py  relatory.py
reports/output/downloaded_artifact/: artifact.tar
reports/src/: __actions__.py  __main__.py  arqManipulation.py  dataPlotter.py  generatedDataDownloader.py  generatedDataUploader.py  ghActionsScrapper.py  git_extractor.py  git_local_extractor.py  logDataclasses.py  logExtractor.py  prometheusExporter.py  report.py
reports_html/: acl.html  basic.html  index.html  policy.html
src/s3_specs/docs/: acl_test.py  benchmark_test.py  big_objects_cli.py  big_objects_cli_test.py  big_objects_test.py  bucket_basic_test.py  bucket_sharing.py  bucket_sharing_cli.py  bucket_sharing_cli_test.py  bucket_sharing_test.py  bulk_delete_test.py  cold_storage_cli.py  cold_storage_cli_test.py  cold_storage_test.py  conftest.py  consistency_test.py  delete_all_cli_test.py  lifecycle_test.py  list_buckets_cli_test.py  list_buckets_test.py  list_buckets_test_cli.py  locking_cli_test.py  locking_test.py  multiple_objects_test.py  object_basic_test.py  object_download_cli.py  object_download_cli_test.py  object_locking_cli.py  object_locking_cli_test.py  objects_list_cli.py  objects_list_cli_test.py  overwrite_consistency_test.py  permission_cli_test.py  permission_test_cli.py  policies_test.py  policy_evaluation_test.py  policy_ip_conditions_test.py  presigned_urls_test.py  profiles_policies_test.py  rbac.py  (+12 more)
src/s3_specs/docs/runs/: list-buckets_test_aws-east-1.md  policies_test_br-ne1.md  profiles_policies_test_br-ne1.md
src/s3_specs/docs/tools/: bulk_delete.py  cold_storage.py  crud.py  locking.py  permission.py  service_account.py  utils.py  versioning.py
src/s3_specs/docs/utils/: cold_storage.py  consistency.py  crud.py  locking.py  utils.py  versioning.py
