[project]
authors = [
    {name = "Marmotitude and AUTHORS", email = "you@example.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "boto3==1.35.99",
    "uuid<2.0,>=1.30",
    "pytest==7.4.2",
    "requests<3.0.0,>=2.32.3",
    "ipynbname<2025.0.0.0,>=2024.1.0.0",
    "pytest-rerunfailures<16.0,>=15.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "pytest-repeat<1.0.0,>=0.9.3",
    "tqdm>=4.67.1",
    "pytest-durations>=1.3.1",
    "prometheus-client>=0.21.1",
    "pyyaml>=6.0.2",
    "pytest-env>=1.1.0",
    # Novas dependências para relatórios
    "fpdf2>=2.7.0",
    "pytest-html>=4.1.0",
    "pytest-json-report>=1.5.0",
    "uv>=0.1.0"
]
name = "s3-specs"
version = "0.1.0"
description = "S3 Specifications Test Suite with Advanced Reporting"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
s3-test = "s3_specs.cli:main"
s3-report = "s3_specs.reports:generate_reports"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupytext>=1.16.5",
    "nbconvert>=7.16.4",
    "uv>=0.1.0"
]

[tool.jupytext]
formats = "ipynb,py:light"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:botocore.auth"
env = ["JUPYTER_PLATFORM_DIRS=1"]
addopts = "--json-report --json-report-file=reports/report.json --html=reports/report.html --self-contained-html"
markers = [
    "acl: Canned ACL (access control list)",
    "locking: Bucket Lock configuration and Object lock retention",
    "policy: Bucket Policy",
    "cold_storage: Storage Classes",
    "basic: Basic S3 functionality",
    "presign: Presigned URLs",
    "bucket_versioning: Bucket Versioning",
    "cli: Tests using CLI",
    "multiple_objects: Tests involving operations with multiple objects on the same bucket",
    "big_objects: Tests with files bigger than 5 mb",
    "consistency: Tests for measure consistency time",
    "benchmark: Tests for benchmark",
    "rapid: quick expected execution magnitude",
    "regular: regular time expected execution magnitude",
    "slow: slow expected execution magnitude",
    "mgc: mgc cli",
    "aws: aws cli",
    "rclone: rclone cli",
    "service_account: Service Account",
]

[tool.s3-tester]
markers = [
  "Benchmark",
  "BigBuckets",
  "BucketManagement",
  "BucketPermission",
  "BucketPolicy",
  "BucketSharing",
  "BucketTagging",
  "ObjectLocking",
  "ObjectManagement",
  "ObjectVersioning",
  "ColdStorage",
  "ServiceAccounts",
]