[project]
name = "standalonepytestmapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens>=3.0.0",
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "bleach>=6.2.0",
    "boto3==1.35.99",
    "botocore>=1.35.99",
    "certifi>=2025.1.31",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.1",
    "comm>=0.2.2",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "debugpy>=1.8.13",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "exceptiongroup>=1.2.2",
    "execnet>=2.1.1",
    "executing>=2.2.0",
    "fastjsonschema>=2.21.1",
    "fonttools>=4.56.0",
    "idna>=3.10",
    "iniconfig>=2.0.0",
    "ipykernel>=6.29.5",
    "ipynbname>=2024.1.0.0",
    "ipython>=8.33.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jmespath>=1.0.1",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "jupyterlab-pygments>=0.3.0",
    "jupytext>=1.16.7",
    "kiwisolver>=1.4.8",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.1.7",
    "mdit-py-plugins>=0.4.2",
    "mdurl>=0.1.2",
    "mistune>=3.1.2",
    "narwhals>=1.28.0",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pandocfilters>=1.5.1",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "platformdirs>=4.3.6",
    "plotly>=6.0.0",
    "pluggy>=1.5.0",
    "prompt-toolkit>=3.0.50",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pygments>=2.19.1",
    "pyparsing>=3.2.1",
    "pytest>=8.3.5",
    "pytest-durations>=1.3.1",
    "pytest-env>=1.1.5",
    "pytest-repeat>=0.9.3",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
    "pyzmq>=26.2.1",
    "referencing>=0.36.2",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "rpds-py>=0.23.1",
    "soupsieve>=2.6",
    "stack-data>=0.6.3",
    "tinycss2>=1.4.0",
    "tomli>=2.2.1",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "urllib3>=2.3.0",
    "uuid>=1.30",
    "wcwidth>=0.2.13",
    "webencodings>=0.5.1",
]
